--- a/openvidu-call-back/package.json
+++ b/openvidu-call-back/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"cookie-parser": "1.4.6",
 		"cookie-session": "^2.0.0",
+		"cors": "^2.8.5",
 		"dotenv": "16.0.2",
 		"express": "4.18.1",
 		"http-proxy-middleware": "2.0.6",
